--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Press Start 2P', cursive;
-  margin: 0;
+  margin: 25px;
   padding: 0;
   background-color: #F6EEC9;
   height: 100vh;
