--- a/src/pages/Eda.css
+++ b/src/pages/Eda.css
@@ -2,7 +2,7 @@
     width: 100%;
     max-width: 900px;
     padding: 20px;
-    padding-top: 100px; /* Add space at the top */
+    padding-top: 300px;
     text-align: center;
     box-sizing: border-box;
   }
