--- a/src/pages/NotGoing.css
+++ b/src/pages/NotGoing.css
@@ -20,8 +20,8 @@ html, body {
  }
 
 h1 {
-  font-size: 1.5rem;
-  margin-bottom: 20px;
+  font-size: .8rem;
+  margin-top: 2%;
 }
 
 .not-going-container h1 {
